--- a/src/meebid.css
+++ b/src/meebid.css
@@ -630,6 +630,7 @@ body {
   color: #ffffff;
   font-size: 24px;
   font-weight: bold;
+  max-width: 125px;
   bottom: 15px;
   left: 15px;
   z-index: 2;
@@ -658,6 +659,11 @@ body {
   font-size: 24px;
   font-weight: bold;
   padding-bottom: 15px;
+}
+
+.categoryDialogItemsWrapper {
+  max-height: 600px;
+  overflow: scroll;
 }
 
 /**
