Update for non-auto complete form in register page and fix initialization bug in admin, home page

--- a/src/meebid.css
+++ b/src/meebid.css
@@ -827,6 +827,10 @@ body {
 .meebidAdminMenuLabel {
   font-weight: bold;
 }
+
+.meebidUserProfileFormWrapper .el-form, .meebidHouseProfileFormWrapper .el-form {
+  min-width: 750px;
+}
 /**
   Admin Page End
   */
