--- a/src/meebid.css
+++ b/src/meebid.css
@@ -14,6 +14,18 @@ body {
   padding-top: 30px;
 }
 
+.meebidMarginBottomMedium {
+  margin-bottom: 20px;
+}
+
+.meebidMarginBottomSmall{
+  margin-bottom: 10px;
+}
+
+.meebidMarginBottomLarge{
+  margin-bottom: 30px;
+}
+
 .meebid .el-radio__input.is-checked+.el-radio__label {
   color: #606266;
 }
@@ -499,6 +511,11 @@ body {
   word-spacing: 0;
   width: 160px;
 }
+
+.meebid .meebidAlertMessage {
+  line-height: 24px;
+}
+
 .meebidListItemContainer {
   padding-left: 10px; 
   padding-right: 10px; 
@@ -693,7 +710,7 @@ body {
   color: #8e8e8e;
   padding-top: 20px;
   width: 100%;
-  padding-left: 180px;
+  padding-left: 210px;
 }
 
 .meebidRegisterContent {
