--- a/src/meebid.css
+++ b/src/meebid.css
@@ -14,6 +14,19 @@ body {
   padding-top: 30px;
 }
 
+.meebidPaddingBottomMedium {
+  padding-bottom: 20px;
+}
+
+.meebidPaddingBottomSmall {
+  padding-bottom: 10px;
+}
+
+.meebidPaddingBottomLarge{
+  padding-bottom: 30px;
+}
+
+
 .meebidMarginBottomMedium {
   margin-bottom: 20px;
 }
@@ -24,6 +37,10 @@ body {
 
 .meebidMarginBottomLarge{
   margin-bottom: 30px;
+}
+
+.meebidLink {
+  cursor: pointer;
 }
 
 .meebid .el-radio__input.is-checked+.el-radio__label {
@@ -144,6 +161,10 @@ body {
 }
 
 .meebidLoginDialogForm {
+  padding-top: 15px;
+}
+
+.meebid .meebidLoginDialog .el-dialog__footer{
   padding-top: 15px;
 }
 
