--- a/src/meebid.css
+++ b/src/meebid.css
@@ -31,6 +31,18 @@ body {
   padding-left: 30px;
 }
 
+.meebidPaddingRightMedium {
+  padding-right: 20px;
+}
+
+.meebidPaddingRightSmall {
+  padding-right: 10px;
+}
+
+.meebidPaddingRightLarge{
+  padding-right: 30px;
+}
+
 .meebidPaddingBottomMedium {
   padding-bottom: 20px;
 }
@@ -61,6 +73,10 @@ body {
 
 .meebidMarginLeftSmall{
   margin-left: 10px;
+}
+
+.meebidMarginLeftClean{
+  margin-left: 0px;
 }
 
 .meebidMarginLeftLarge{
@@ -987,7 +1003,6 @@ body {
 
 .meebidUserProfileLongLabel .el-form-item__label{
   line-height: 20px;
-  padding-top: 10px;
 }
 
 .meebid-upload-overlimit {
@@ -1054,6 +1069,53 @@ body {
 .meebid .meebidAddressWrapper {
   border-top: 1px solid #efefef; 
 }
+
+.meebid .ql-snow .ql-picker-label::before {
+  vertical-align: top;
+}
+
+.meebid .ql-container {
+  height: calc(100% - 60px);
+}
+
+.meebid .meebidTextEditorInForm {
+  height: 200px;
+}
+
+.meebid .meebidAdminContentInLoading {
+  overflow-y: hidden;
+}
+
+.meebid .meebidAuctionImageContainer {
+  width: 154px;
+  height: 154px;
+  border: none;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+  text-decoration: none;
+  outline: none;
+}
+
+.meebid .meebidAuctionImageContainer img{
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  vertical-align: middle;
+}
+
+.meebid .meebidAuctionListButton {
+  width: 100px;
+}
+
 /**
   Admin Page End
   */
@@ -1084,3 +1146,4 @@ body {
 /**
   Email Validation End
   */
+
