--- a/src/meebid.css
+++ b/src/meebid.css
@@ -1305,6 +1305,14 @@ body {
   overflow: scroll;
 }
 
+.meebid .meebidAddressTableDefaultLabel {
+  padding-left: 10px;
+}
+
+.meebid .meebidBatchUploadDialogHintLabel {
+  float: left;
+  margin-left: calc(((100% + 10px)* 0.05) + 5px);
+}
 /**
   Admin Page End
   */
