--- a/src/meebid.css
+++ b/src/meebid.css
@@ -811,6 +811,85 @@ body {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
+.meebidCategorySecItemToolTip {
+  max-width: 500px;
+}
+
+.meebidCategorySecItem {
+  display: inline-block;
+  margin: 6px;
+  padding: 1.5px;
+  position: relative;
+  border-radius: 14px;
+  border: 1.5px solid transparent;
+  -moz-transition: border 0.3s ease-in,border 0.2s ease-out; 
+  -webkit-transition: border 0.3s ease-in,border 0.2s ease-out; 
+  -o-transition: border 0.3s ease-in,border 0.2s ease-out; 
+  transition: border 0.3s ease-in,border 0.2s ease-out;
+}
+
+.meebidCategorySecItem:hover {
+  cursor: pointer;
+}
+
+.meebidCategorySecItem.selected:hover {
+  border: 1.5px solid rgba(0,0,0,0.5);
+}
+
+.meebidCategorySecItem .meebidCategoryLabel {
+  position: absolute;
+  bottom: 20px;
+  color: #ffffff;
+  width: 75px;
+}
+
+.meebidCategorySecItem img {
+  border-radius: 12.5px;
+}
+
+.meebidCategorySecItemImage {
+  width: 77px;
+  height: 77px;
+}
+
+.meebidCategorySecItem.selected {
+  border: 1.5px solid rgba(0,0,0,0.8);
+}
+
+.meebidCategorySecItemLabel {
+  position: absolute;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 14px;
+  max-width: 62.5px;
+  bottom: 7.5px;
+  left: 7.5px;
+  z-index: 2;
+  white-space: normal;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.meebidCategorySecItemMask {
+  width: 77px;
+  height: 77px;
+  z-index: 1;
+  -moz-transition: background 0.3s ease-in,color 0.2s ease-out; 
+  -webkit-transition: background 0.3s ease-in,color 0.2s ease-out; 
+  -o-transition: background 0.3s ease-in,color 0.2s ease-out; 
+  transition: background 0.3s ease-in,color 0.2s ease-out;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 1.5px;
+  left: 1.5px;
+  border-radius: 12.5px;
+}
+
+.meebidCategorySecItem:hover .meebidCategorySecItemMask {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 .categoryDialogInfoLabel {
   font-size: 24px;
   font-weight: bold;
@@ -818,7 +897,7 @@ body {
 }
 
 .categoryDialogItemsWrapper {
-  max-height: 600px;
+/*  max-height: 600px;*/
   overflow: scroll;
 }
 
