Update for waterfull lots

--- a/src/meebid.css
+++ b/src/meebid.css
@@ -400,6 +400,10 @@ body {
     -webkit-transition: opacity 0.3s ease-in
 }
 
+.meebid .meebidUiLocalBusyIndicatorTransparency {
+  background-color: transparent;
+}
+
 .meebidUiLocalBusy .meebidUiLocalBusy .meebidUiLocalBusyIndicator {
     display: none
 }
