Update for home page search with real data, refactor to move header element into one additional header component

--- a/src/meebid.css
+++ b/src/meebid.css
@@ -814,6 +814,8 @@ body {
   line-height: 16px;
   word-spacing: 0;
   width: 160px;
+  font-weight: bold;
+  color: #5c5c5c;
 }
 
 .meebid .meebidAlertMessage {
