--- a/src/meebid.css
+++ b/src/meebid.css
@@ -187,6 +187,42 @@ body {
   z-index: 2;
   background: #ffffff;
 }
+/*
+@media (min-width: 768px) {
+  .meebid .meebidHomeHeaderContent {
+    width: 740px;
+  }
+}
+
+@media (min-width: 992px) {
+  .meebid .meebidHomeHeaderContent {
+    width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .meebid .meebidHomeHeaderContent {
+    width: 1160px;
+  }  
+}
+
+@media (min-width: 1440px) {
+  .meebid .meebidHomeHeaderContent {
+    width: 1344px;
+  }  
+}
+
+@media (min-width: 1728px) {
+  .meebid .meebidHomeHeaderContent {
+    width: 1536px;
+  }  
+}
+
+.meebid .meebidHomeHeaderContent {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}*/
 
 .meebid .form-control {
   background-color: #eeeeee;
@@ -217,6 +253,12 @@ body {
 }
 
 .meebidHomeContent {
+  position: relative;
+  min-width: 900px;
+  margin-top: 85px;
+}
+
+.meebidContent {
   position: relative;
   min-width: 900px;
   margin-top: 85px;
@@ -805,6 +847,10 @@ body {
   min-height: 120px;
 }
 
+.meebidListItemImageWrapper img {
+  border-radius: 8px; 
+}
+
 .meebidListItemDescriptionWrapper {
   padding-top: 10px;
   padding-left: 4px;
@@ -848,7 +894,7 @@ body {
 .meebidListItemContainer {
   padding-left: 10px; 
   padding-right: 10px; 
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   padding-top: 10px;
 }
 
@@ -1647,5 +1693,135 @@ body {
 
 /**
   Email Validation End
+  */
+
+/**
+  Lot Detail Start
+  */
+@media (min-width: 768px) {
+  .meebid .meebidLotDetailContent {
+    width: 740px;
+  }
+}
+
+@media (min-width: 992px) {
+  .meebid .meebidLotDetailContent {
+    width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .meebid .meebidLotDetailContent {
+    width: 1160px;
+  }  
+}
+
+.meebid .meebidLotDetailContent {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 105px;
+}  
+
+.meebid .meebidLotDetailCarouselContainer {
+  padding-top: 50px;
+  width: 620px;
+  float: left;
+}
+
+.meebid .meebidLotDetailImageContainer {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  display: inline-block;
+  margin: 5px;
+  padding: 0;
+  vertical-align: top;
+  text-decoration: none;
+  outline: none;
+  overflow: hidden;
+  background: white;
+  border: 2px solid #9c9c9c;
+  border-radius: 8px;
+}
+
+.meebid .el-carousel--card .el-carousel__container {
+  height: 320px;
+}
+
+.meebid .meebidLotDetailImageContainer img{
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  vertical-align: middle;
+}
+
+.meebid .meebidLotDetailInformationContainer {
+  width: calc(100% - 620px);
+  float: left;
+  padding-top: 50px;
+}
+.meebid .meebidLotDetailDescriptionContainer {
+
+}
+
+.meebid .meebidLotDetailDescriptionNameContainer {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.meebid .meebidLotDetailDescriptionEstPriceContainer {
+  background: #e2e2e2;
+  padding: 10px 15px;
+  width: fit-content;
+}
+
+.meebid .meebidLotDetailDescriptionEstPriceContainer span {
+  font-weight: bold;
+}
+
+.meebid .meebidLotDetailDescriptionStartBidPriceContainer {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.meebid .meebidLotDetailDescriptionAuctionTimeContainer {
+  border-top: 1px solid #e2e2e2;
+  font-size: 16px;
+}
+
+.meebid .meebidCarouselIndicatorImageContainer {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  display: inline-block;
+  margin: 5px;
+  padding: 0;
+  vertical-align: top;
+  text-decoration: none;
+  outline: none;
+  background: white;
+  border: 1px solid #9c9c9c;
+}
+
+.meebid .meebidCarouselIndicatorImageContainer img{
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  vertical-align: middle;
+}
+/**
+  Lot Detail End
   */
 
