--- a/src/meebid.css
+++ b/src/meebid.css
@@ -671,6 +671,43 @@ body {
   meebid List Item Start
   */
 
+.meebidTileViewIcon {
+  color: #FF5242;
+  font-size: 20px;
+}
+
+.meebidHomePageListShowSwitch .meebidHomePageItemListContainer{
+  position: relative;
+  top: 30px;
+}
+
+.meebidHomePageListShowSwitch .meebidHomePageListViewSwitcher{
+  display: initial;
+}
+
+.meebidHomePageListViewSwitcher {
+  position: absolute;
+  right: 20px;
+  display: none;
+}
+
+.meebidWaterfallViewIcon {
+  color: #FF5242;
+  font-size: 20px;
+}
+
+.meebidTileViewIcon:hover, .meebidTileViewIcon:visited, 
+.meebidTileViewIcon:focus, .meebidTileViewIcon:active {
+  color: #d24437;
+  cursor: pointer;
+}
+
+.meebidWaterfallViewIcon:hover, .meebidWaterfallViewIcon:visited, 
+.meebidWaterfallViewIcon:focus, .meebidWaterfallViewIcon:active {
+  color: #d24437;
+  cursor: pointer;
+}
+
 .meebidHomePageList {
   margin-top: 10px;
   margin-left: auto;
@@ -866,6 +903,12 @@ body {
   transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
 }
+
+.meebidTileViewHomePageList .meebidListItemWrapper {
+  width: 260px;
+  height: 340px;
+}
+
 .meebidListItemImageWrapper {
   border-radius: 8px; 
   overflow: hidden; 
@@ -874,8 +917,41 @@ body {
   min-height: 120px;
 }
 
+.meebidTileViewHomePageList .meebidListItemImageWrapper {
+  width: 240px;
+  height: 240px;
+  border: none;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+  text-decoration: none;
+  outline: none;
+  border-radius: inherit;
+}
+
+.meebid .meebidTileViewHomePageList .meebidListItemImageWrapper img{
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  vertical-align: middle;
+  width: auto;
+  border-radius: inherit;
+}
+
 .meebidListItemImageWrapper img {
+  transition-property: width,height,transform;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
   border-radius: 8px; 
+  width: 100%;
 }
 
 .meebidListItemDescriptionWrapper {
@@ -897,7 +973,7 @@ body {
   color: #aaaaaa;
   font-size: 12px;
   float: right;
-  width: 60px;
+  width: 40px;
   text-align: right;
 }
 
@@ -910,9 +986,15 @@ body {
   letter-spacing: -0.15px;
   line-height: 16px;
   word-spacing: 0;
-  width: 160px;
+  width: 190px;
   font-weight: bold;
   color: #3c3c3c;
+}
+
+.meebidTileViewHomePageList .pinDescription {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .meebid .meebidAlertMessage {
@@ -968,6 +1050,10 @@ body {
   float: left;
   left: 15px;
   max-width: calc(100% - 30px);
+}
+
+.meebidTileViewHomePageList .meebidListItemMaskAuctionHouseNameWrapper {
+  top: 200px !important;
 }
 
 .meebidListItemMaskAuctionHouseNameWrapper .meebidButtonWrapper {
