Update for view switch in home page list

--- a/src/meebid.css
+++ b/src/meebid.css
@@ -918,6 +918,7 @@ body {
 }
 
 .meebidTileViewHomePageList .meebidListItemImageWrapper {
+  background-color: #efefef;
   width: 240px;
   height: 240px;
   border: none;
